--- a/app/src/main/res/layout/game_fragment.xml
+++ b/app/src/main/res/layout/game_fragment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#B1D7D2"
     tools:context=".ui.fragments.game.GameFragment">
 
@@ -27,7 +28,7 @@
         android:layout_marginLeft="15dp"
         android:layout_marginRight="11dp"
         android:padding="2dp"
-        android:backgroundTint="#E5E2CA">
+        android:backgroundTint="@color/secondary">
 
         <ImageView
             android:id="@+id/tick_iv"
@@ -58,17 +59,20 @@
             android:text="@string/word_English" />
 
 
-        <EditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/translate_et"
-            style="@style/MyText"
-            android:inputType="text"
-            android:layout_gravity="right"
-            android:textSize="15sp"
-            android:layout_margin="5dp"
+
             android:layout_width="170dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_margin="5dp"
             android:layout_marginRight="15dp"
-            android:hint="@string/enter_translate_et"/>
+            android:fontFamily="@font/montserrat_medium"
+            android:hint="@string/enter_translate_et"
+            android:inputType="text"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:textSize="15sp" />
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
@@ -86,9 +90,7 @@
             android:layout_marginRight="10dp"
             android:layout_marginTop="50dp"
             android:layout_width="130dp"
-            android:layout_height="50dp"
-
-         />
+            android:layout_height="50dp" />
 
         <Button
             android:id="@+id/skip_btn"
@@ -98,15 +100,6 @@
             android:layout_marginLeft="10dp"
             android:layout_marginTop="50dp"
             android:layout_width="130dp"
-            android:layout_height="50dp"
-
-            />
-
-
+            android:layout_height="50dp" />
     </LinearLayout>
-
-
-
-
-
 </FrameLayout>
