--- a/app/src/main/res/layout/game_fragment_start.xml
+++ b/app/src/main/res/layout/game_fragment_start.xml
@@ -1,147 +1,165 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/primary"
-    tools:context=".ui.fragments.game.GameStartFragment"
-    android:paddingTop="10dp"
-    android:paddingStart="40dp"
-    android:paddingEnd="40dp">
+    tools:context=".ui.fragments.game.GameStartFragment">
 
-    <TextView
-        android:id="@+id/translate_tv"
-        style="@style/MyText"
-        android:layout_width="168dp"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        android:layout_marginTop="70dp"
-        android:text="@string/show_translate"
-        android:textSize="25sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/teal_700"
+        app:navigationIcon="?attr/homeAsUpIndicator"
+        app:title="@string/add_theme"
+        style="@style/MyText" />
 
-    <RadioGroup
-        android:id="@+id/eng_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="55dp"
-        android:layout_marginStart="30dp"
-        app:layout_constraintStart_toEndOf="@id/translate_tv"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <RadioButton
-            android:id="@+id/ru_btn"
-            style="@style/MyText"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="RU" />
-
-        <RadioButton
-            android:id="@+id/eng_btn"
-            style="@style/MyText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="ENG" />
-    </RadioGroup>
-
-    <TextView
-        android:id="@+id/goal"
-        android:layout_width="168dp"
-        android:layout_height="wrap_content"
-        android:maxLines="2"
-        app:layout_constraintTop_toBottomOf="@id/translate_tv"
-        app:layout_constraintStart_toStartOf="@id/translate_tv"
-        android:layout_marginTop="70dp"
-        android:text="@string/goal"
-        style="@style/MyText"
-        android:textSize="25sp" />
-
-    <RadioGroup
-        android:id="@+id/values_group"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        app:layout_constraintStart_toStartOf="@id/eng_group"
-        app:layout_constraintTop_toBottomOf="@id/eng_group">
-
-        <RadioButton
-            android:id="@+id/time_btn"
-            style="@style/MyText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@string/time" />
-
-        <RadioButton
-            android:id="@+id/word_btn"
-            style="@style/MyText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:text="@string/words" />
-    </RadioGroup>
-
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/goal_in_layout"
-        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:boxStrokeColor="@color/teal_700"
-        app:boxBackgroundColor="@color/primary"
-        app:suffixTextColor="@color/black"
-        android:textColorHint="@color/black"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/goal"
-        >
+        android:layout_marginStart="30dp"
+        android:orientation="horizontal">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/number_goal"
+        <TextView
+            android:id="@+id/translate_tv"
+            style="@style/MyText"
+            android:layout_width="168dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:maxLines="2"
+            android:text="@string/show_translate"
+            android:textSize="25sp" />
+
+        <RadioGroup
+            android:id="@+id/eng_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="60dp">
+
+            <RadioButton
+                android:id="@+id/ru_btn"
+                style="@style/MyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="RU" />
+
+            <RadioButton
+                android:id="@+id/eng_btn"
+                style="@style/MyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="ENG" />
+        </RadioGroup>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="50dp"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/goal"
+            style="@style/MyText"
+            android:layout_width="168dp"
+            android:layout_height="wrap_content"
+            android:maxLines="2"
+            android:layout_marginTop="70dp"
+            android:text="@string/goal"
+            android:textSize="25sp" />
+
+        <RadioGroup
+            android:id="@+id/values_group"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="number"
-            android:hint="@string/value"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="60dp">
+
+            <RadioButton
+                android:id="@+id/time_btn"
+                style="@style/MyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:text="@string/time" />
+
+            <RadioButton
+                android:id="@+id/word_btn"
+                style="@style/MyText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="4dp"
+                android:textSize="16sp"
+                android:text="@string/words" />
+        </RadioGroup>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:layout_marginStart="30dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="30dp"
+        android:orientation="vertical">
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/goal_in_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
+            app:boxStrokeColor="@color/teal_700"
+            app:boxBackgroundColor="@color/primary"
+            app:suffixTextColor="@color/black"
+            android:textColorHint="@color/black">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/number_goal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="number"
+                android:hint="@string/value"
+                android:textAppearance="@style/MyText"
+                android:fontFamily="@font/montserrat_medium"
+                android:textColor="@color/black"
+                android:maxLength="3"
+                android:textSize="15sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <TextView
+            android:id="@+id/choose_themes_tv"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:padding="12dp"
+            android:layout_marginBottom="20dp"
+            android:hint="@string/choose_themes"
+            android:textColorHint="@color/black"
+            android:textSize="20sp"
             android:textAppearance="@style/MyText"
-            android:fontFamily="@font/montserrat_medium"
             android:textColor="@color/black"
-            android:maxLength="3"
-            android:textSize="15sp"
-             />
+            android:background="@android:drawable/editbox_background"
+            android:backgroundTint="@color/teal_200"
+            app:drawableEndCompat="@drawable/ic_arrow_drop_down"
+            />
 
-    </com.google.android.material.textfield.TextInputLayout>
-
-
-    <TextView
-        android:id="@+id/choose_themes_tv"
-        android:layout_height="wrap_content"
-        android:layout_width="match_parent"
-        android:layout_marginTop="50dp"
-        android:padding="12dp"
-        android:hint="@string/choose_themes"
-        android:textColorHint="@color/black"
-        android:textSize="20sp"
-        android:textAppearance="@style/MyText"
-        android:textColor="@color/black"
-        android:background="@android:drawable/editbox_background"
-        android:backgroundTint="@color/teal_200"
-        app:drawableEndCompat="@drawable/ic_arrow_drop_down"
-        app:layout_constraintTop_toBottomOf="@id/goal_in_layout"
-        app:layout_constraintStart_toStartOf="@id/goal_in_layout"
-        />
-
-    <Button
-        android:id="@+id/start_bt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@style/MyButton"
-        android:text="@string/start"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="@id/choose_themes_tv"
-        android:layout_marginBottom="50dp"/>
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/start_bt"
+            style="@style/MyButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="50dp"
+            android:text="@string/start" />
+    </LinearLayout>
+</FrameLayout>
