--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,7 +10,8 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/teal_700</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
-        <item name="colorOnSecondary">#E5E2CA</item>
+        <item name="colorOnSecondary">@color/secondary</item>
+
         <!-- Status bar color. -->
         <item name="android:statusBarColor" >@color/teal_800</item>
         <!-- Customize your theme here. -->
