--- a/app/src/main/res/layout/add_word_fragment.xml
+++ b/app/src/main/res/layout/add_word_fragment.xml
@@ -7,12 +7,8 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@color/teal_700"
-        app:navigationIcon="?attr/homeAsUpIndicator"
-        app:title="@string/add_word"
-        style="@style/MyText" />
+        style="@style/MyToolBar"
+        app:title="@string/add_word" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
