--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,156 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/primary"
-    tools:context=".ui.fragments.navigation.StatisticsFragment"
-    android:orientation="vertical">
+    tools:context=".ui.fragments.navigation.StatisticsFragment">
+
+    <View
+    android:id="@+id/centerHorizontalShim"
+    android:layout_height="match_parent"
+    android:layout_width="0dp"
+    android:visibility="invisible"
+    android:layout_centerHorizontal="true"/>
+
+    <View
+        android:id="@+id/centerVerticalShim"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:visibility="invisible"
+        android:layout_centerVertical="true"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@id/centerHorizontalShim"
+        android:layout_alignBottom="@id/centerVerticalShim"
+        android:layout_toEndOf="@id/centerHorizontalShim"
         android:orientation="vertical">
 
         <LinearLayout
+            android:id="@+id/total_games_linear"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:background="@color/secondary"
+            android:orientation="vertical"
+            android:layout_weight="1">
 
-            <LinearLayout
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="@string/total_games" />
+
+            <TextView
+                android:id="@+id/total_games_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="10dp"
-                android:background="@color/secondary"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:text="5" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:layout_marginTop="15dp"
-                    android:textAppearance="@style/MyText"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:text="@string/total_games" />
-
-                <TextView
-                    android:id="@+id/total_games_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:textAppearance="@style/MyText"
-                    android:textColor="@color/black"
-                    android:textSize="30sp"
-                    android:text="5" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:background="@color/secondary"
-                android:orientation="vertical"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:layout_marginTop="15dp"
-                    android:textAppearance="@style/MyText"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:text="@string/total_answers" />
-
-                <TextView
-                    android:id="@+id/total_answers_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:textAppearance="@style/MyText"
-                    android:textColor="@color/black"
-                    android:textSize="30sp"
-                    android:text="5" />
-
-            </LinearLayout>
         </LinearLayout>
 
         <LinearLayout
+            android:id="@+id/right_answers_linear"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginTop="20dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
-            android:layout_marginBottom="?attr/actionBarSize"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="@color/secondary"
+            android:orientation="vertical"
 
-            <LinearLayout
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="@string/right_answers" />
+
+            <TextView
+                android:id="@+id/right_answers_tv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginEnd="10dp"
-                android:background="@color/secondary"
-                android:orientation="vertical"
-                android:layout_weight="1">
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:text="5" />
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:layout_marginTop="15dp"
-                    android:textAppearance="@style/MyText"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:text="@string/right_answers" />
-
-                <TextView
-                    android:id="@+id/right_answers_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:textAppearance="@style/MyText"
-                    android:textColor="@color/black"
-                    android:textSize="30sp"
-                    android:text="5" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="10dp"
-                android:background="@color/secondary"
-                android:orientation="vertical"
-                android:layout_weight="1">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center_horizontal"
-                    android:layout_marginTop="15dp"
-                    android:textAppearance="@style/MyText"
-                    android:textColor="@color/black"
-                    android:textSize="18sp"
-                    android:text="@string/wrong_answers" />
-
-                <TextView
-                    android:id="@+id/wrong_answers_tv"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical|center_horizontal"
-                    android:textAppearance="@style/MyText"
-                    android:textColor="@color/black"
-                    android:textSize="30sp"
-                    android:text="5" />
-
-            </LinearLayout>
         </LinearLayout>
+
     </LinearLayout>
-</LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@id/centerVerticalShim"
+        android:layout_toEndOf="@id/centerHorizontalShim"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/total_answers_linear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:background="@color/secondary"
+            android:orientation="vertical"
+
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="@string/total_answers" />
+
+            <TextView
+                android:id="@+id/total_answers_tv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:text="5" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/wrong_answers_linear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="@color/secondary"
+            android:orientation="vertical"
+
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="@string/wrong_answers" />
+
+            <TextView
+                android:id="@+id/wrong_answers_tv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="30sp"
+                android:text="5" />
+        </LinearLayout>
+
+    </LinearLayout>
+
+
+
+
+    <!--    <Button-->
+<!--        android:id="@+id/btLeft"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentLeft="true"-->
+<!--        android:layout_toLeftOf="@+id/centerShim"-->
+<!--        android:text="Left Button" />-->
+
+<!--    &lt;!&ndash;Same deal, but on the right &ndash;&gt;-->
+<!--    <Button-->
+<!--        android:id="@+id/btRight"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentRight="true"-->
+<!--        android:layout_toRightOf="@+id/centerShim"-->
+<!--        android:layout_below="@+id/tvLeft"-->
+<!--        android:text="Right Button" />-->
+
+</RelativeLayout>
