--- a/app/src/main/res/layout/game_result_fragment.xml
+++ b/app/src/main/res/layout/game_result_fragment.xml
@@ -1,103 +1,188 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#B1D7D2"
+    android:background="@color/primary"
     tools:context=".ui.fragments.game.GameStartFragment">
 
+    <View
+        android:id="@+id/centerHorizontalShim"
+        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:visibility="invisible"
+        android:layout_centerHorizontal="true"/>
+
+    <View
+        android:id="@+id/centerVerticalShim"
+        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:visibility="invisible"
+        android:layout_centerVertical="true"/>
+
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginBottom="100dp"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="10dp"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@id/centerHorizontalShim"
+        android:layout_alignBottom="@id/centerVerticalShim"
+        android:layout_toEndOf="@id/centerHorizontalShim"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/right_answers_tv"
-            style="@style/MyText"
-            android:textSize="25sp"
-            android:text="@string/right_answers_tv"
-            android:layout_marginStart="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-           />
+        <LinearLayout
+            android:id="@+id/total_games_linear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:background="@color/secondary"
+            android:orientation="vertical"
+            android:layout_weight="1">
 
-        <TextView
-            android:id="@+id/right_counter_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/MyText"
-            android:textSize="25sp"
-            android:text=""
-            android:layout_marginStart="20dp" />
+            <TextView
+                android:id="@+id/total_questions_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="@string/total_answers" />
+
+            <TextView
+                android:id="@+id/total_counter_tv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/right_answers_linear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="@color/secondary"
+            android:orientation="vertical"
+
+            android:layout_weight="1">
+
+            <TextView
+                android:id="@+id/right_answers_tv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="@string/right_answers" />
+
+            <TextView
+                android:id="@+id/right_counter_tv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="?attr/actionBarSize"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="15dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@id/centerVerticalShim"
+        android:layout_toEndOf="@id/centerHorizontalShim"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/wrong_answers_tv"
-            style="@style/MyText"
-            android:textSize="25sp"
-            android:text="@string/wrong_answers_tv"
-            android:layout_marginStart="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            />
+        <LinearLayout
+            android:id="@+id/total_answers_linear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:background="@color/secondary"
+            android:orientation="vertical"
 
-        <TextView
-            android:id="@+id/wrong_counter_tv"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            style="@style/MyText"
-            android:textSize="25sp"
-            android:text=""
-            android:layout_marginStart="20dp" />
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="@string/skipped_words_game" />
+
+            <TextView
+                android:id="@+id/total_answers_tv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/wrong_answers_linear"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="@color/secondary"
+            android:orientation="vertical"
+            android:layout_weight="1">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                android:text="@string/wrong_answers" />
+
+            <TextView
+                android:id="@+id/wrong_counter_tv"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:textAppearance="@style/MyText"
+                android:textColor="@color/black"
+                android:textSize="30sp" />
+        </LinearLayout>
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginTop="80dp">
-
-        <TextView
-            android:id="@+id/total_questions_tv"
-            style="@style/MyText"
-            android:textSize="25sp"
-            android:text="@string/total_questions_tv"
-            android:layout_gravity="top"
-            android:layout_marginStart="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-
-        <TextView
-            android:id="@+id/total_counter_tv"
-            style="@style/MyText"
-            android:textSize="25sp"
-            android:layout_gravity="top"
-            android:layout_marginStart="20dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
-
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center|bottom"
         android:layout_marginBottom="100dp"
-        android:backgroundTint="#FF008577">
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:backgroundTint="@color/teal_500">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="5dp"
-                >
+                android:layout_margin="5dp">
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/changeMode_btn"
@@ -120,6 +205,16 @@
                     app:maxImageSize="48dp" />
 
                 <com.google.android.material.floatingactionbutton.FloatingActionButton
+                    android:id="@+id/info_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="#FF008577"
+                    android:elevation="0dp"
+                    android:src="@drawable/ic_cloud_queue"
+                    app:elevation="0dp"
+                    app:maxImageSize="48dp" />
+
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/home_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -129,9 +224,5 @@
                     app:elevation="0dp"
                     app:maxImageSize="48dp" />
         </LinearLayout>
-
     </androidx.cardview.widget.CardView>
-
-
-
-</FrameLayout>
+</RelativeLayout>
