--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
+    style="@style/DrawerLayoutStyle"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -16,15 +17,15 @@
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        style="@style/MyText"
-        app:itemTextColor="@color/teal_500"
-        app:itemIconTint="@color/teal_500"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:background="@color/primary"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
+        app:itemIconTint="@color/teal_500"
+        app:itemTextAppearance="@style/MyText"
+        app:itemTextColor="@color/teal_500"
         app:menu="@menu/activity_main_drawer" />
 
    </androidx.drawerlayout.widget.DrawerLayout>
