--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,16 +24,15 @@
 
     </group>
 
-    <item android:title="@string/others">
-        <menu>
-            <item android:id="@+id/nav_support"
-                android:icon="@drawable/ic_help"
-                android:title="@string/support"/>
+    <group>
+        <item android:id="@+id/nav_support"
+            android:icon="@drawable/ic_help"
+            android:title="@string/support"/>
 
-            <item android:id="@+id/nav_about_us"
-                android:icon="@drawable/ic_about_us"
-                android:title="@string/about_us"/>
-        </menu>
-    </item>
+        <item android:id="@+id/nav_about_us"
+            android:icon="@drawable/ic_about_us"
+            android:title="@string/about_us"/>
+
+    </group>
 
 </menu>
