--- a/app/src/main/res/layout/add_theme_fragment.xml
+++ b/app/src/main/res/layout/add_theme_fragment.xml
@@ -45,6 +45,7 @@
                     android:layout_width="256dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_medium"
+                    android:textColor="@color/black"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
@@ -73,6 +74,7 @@
                     android:layout_width="256dp"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/montserrat_medium"
+                    android:textColor="@color/black"
                     android:textSize="15sp" />
             </com.google.android.material.textfield.TextInputLayout>
     </LinearLayout>
