--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -60,6 +60,7 @@
     <style name="InputLayoutStyle" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
         <item name="boxStrokeColor">@color/teal_700</item>
         <item name="boxStrokeWidth">2dp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="DrawerLayoutStyle" parent="Widget.Material3.DrawerLayout">
