--- a/app/src/main/res/layout/add_word_fragment.xml
+++ b/app/src/main/res/layout/add_word_fragment.xml
@@ -10,7 +10,7 @@
         app:title="@string/add_word" />
 
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/translate_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -90,13 +90,12 @@
     <Button
         style="@style/MyButton"
         android:id="@+id/word_btn"
-        android:onClick="additionWord"
         android:layout_width="wrap_content"
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
         android:text="@string/dialogBtn_ok"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+        app:layout_constraintTop_toBottomOf="@+id/translate_layout" />
 
 
 </FrameLayout>
