--- a/app/src/main/res/layout/game_fragment_start.xml
+++ b/app/src/main/res/layout/game_fragment_start.xml
@@ -11,8 +11,32 @@
         style="@style/MyToolBar"
         app:title="@string/add_theme" />
 
+    <TextView
+        android:id="@+id/empty_tv"
+        android:textAppearance="@style/MyText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="invisible"
+        android:layout_gravity="center_vertical"
+        android:layout_margin="50dp"
+        android:textSize="20sp"
+        android:textColor="@color/teal_500"
+        android:text="@string/no_words" />
+
+    <Button
+        android:id="@+id/empty_bt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:visibility="invisible"
+        style="@style/MyButton"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="55dp"
+        android:text="@string/go_to_themes"/>
+
     <LinearLayout
-        android:id="@+id/linearLayout"
+        android:id="@+id/translate_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
@@ -56,7 +80,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout1"
+        android:id="@+id/goal_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -102,7 +126,7 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
+        android:id="@+id/value_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
