--- a/app/src/main/res/layout/add_word_fragment.xml
+++ b/app/src/main/res/layout/add_word_fragment.xml
@@ -94,7 +94,7 @@
         android:layout_gravity="center"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:text="@string/dialogBtn_ok"
+        android:text="@string/ok"
         app:layout_constraintTop_toBottomOf="@+id/translate_layout" />
 
 
