--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,27 +19,24 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="65dp"
             android:layout_gravity="center">
 
             <Button
-                android:layout_marginTop="9dp"
                 android:id="@+id/btn_continue"
                 style="@style/MyButton"
                 android:layout_width="192dp"
-                android:layout_height="65dp"
+                android:layout_height="match_parent"
                 android:onClick="gameClick"
-                android:text="@string/btn_continue" />
+                android:text="@string/training" />
 
             <Button
                 android:id="@+id/btn_theme"
                 style="@style/MyButton"
                 android:layout_width="192dp"
-                android:layout_height="65dp"
+                android:layout_height="match_parent"
                 android:onClick="themeClick"
                 android:text="@string/btn_theme" />
         </LinearLayout>
-
     </LinearLayout>
-
 </FrameLayout>
