--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,32 +8,26 @@
     <fragment
         android:id="@+id/nav_main"
         android:name="com.example.kideng.ui.fragments.navigation.MainFragment"
-        android:label="Главная"
+        android:label="@string/main"
         tools:layout="@layout/fragment_main" />
 
 
     <fragment
         android:id="@+id/nav_statistics"
         android:name="com.example.kideng.ui.fragments.navigation.StatisticsFragment"
-        android:label="Статистика"
+        android:label="@string/user_statistics"
         tools:layout="@layout/fragment_statistics" />
-
-    <fragment
-        android:id="@+id/nav_settings"
-        android:name="com.example.kideng.ui.fragments.navigation.SettingsFragment"
-        android:label="Настройки"
-        tools:layout="@layout/fragment_settings" />
 
     <fragment
         android:id="@+id/nav_support"
         android:name="com.example.kideng.ui.fragments.navigation.SupportFragment"
-        android:label="Поддержка"
+        android:label="@string/support"
         tools:layout="@layout/fragment_support" />
 
     <fragment
         android:id="@+id/nav_about_us"
         android:name="com.example.kideng.ui.fragments.navigation.AboutUsFragment"
-        android:label="О нас"
+        android:label="@string/about_us"
         tools:layout="@layout/fragment_about_us" />
 
 </navigation>
