--- a/app/src/main/res/layout/game_fragment_start.xml
+++ b/app/src/main/res/layout/game_fragment_start.xml
@@ -68,14 +68,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="50dp"
-                android:text="RU" />
+                android:text="@string/ru" />
 
             <RadioButton
                 android:id="@+id/eng_btn"
                 style="@style/MyText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ENG" />
+                android:text="@string/eng" />
         </RadioGroup>
     </LinearLayout>
 
