--- a/app/src/main/res/layout/word_activity.xml
+++ b/app/src/main/res/layout/word_activity.xml
@@ -35,7 +35,7 @@
         app:layout_anchorGravity="center"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:onClick="addWord"
+        android:id="@+id/add_word_btn"
         android:backgroundTint="@color/teal_500"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
